--- a/.env
+++ b/.env
@@ -1,12 +1,5 @@
 
-
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 DATABASE_URL="mongodb+srv://capussphere87:4ADRS6389LLSzkC0@cluster0.yu6jipr.mongodb.net/"
+MONGO_URI_LOCAL="mongodb://127.0.0.1:27017/campusspehre"
 SECRET_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpX"
 NODE_ENV=development
