--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
@@ -30,6 +31,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
