--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
@@ -23,6 +24,7 @@
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "sharp": "^0.33.3",
     "xlsx": "^0.18.5",
     "zod": "^3.23.0"
